--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ProjekatProba">
-        <activity android:name=".SearchActivityLens"></activity>
-        <activity android:name=".SearchActivity" />
+        <activity android:name=".SearchActivity"></activity>
         <activity android:name=".RegistryActivity" />
         <activity
             android:name=".HomeActivity"
