--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.projekatproba">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ProjekatProba">
-        <activity android:name=".SearchActivity"></activity>
+        <activity android:name=".ChangeProfileDataActivity"></activity>
+        <activity android:name=".SearchActivity" />
         <activity android:name=".RegistryActivity" />
         <activity
             android:name=".HomeActivity"
@@ -23,7 +26,5 @@
         </activity>
         <activity android:name=".LogInActivity" />
     </application>
-
-    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
