--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ProjekatProba">
-        <activity android:name=".ChangeProfileDataActivity"></activity>
+        <activity android:name=".ChangePasswordActivity"></activity>
+        <activity android:name=".DeleteAccountActivity" />
+        <activity android:name=".ChangeUsernameActivity" />
         <activity android:name=".SearchActivity" />
         <activity android:name=".RegistryActivity" />
         <activity
