radi sve bez rakicevog 6.13 9:05h

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ProjekatProba">
-        <activity android:name=".ProfileActivity"></activity>
+        <activity android:name=".ChangePasswordActivity"></activity><activity android:name=".ProfileActivity"></activity>
         <activity android:name=".ChangeProfileDataActivity" />
-        <activity android:name=".ChangePasswordActivity" />
-        <activity android:name=".DeleteAccountActivity" />
+        <activity android:name=".ChangePasswordActivity" />        <activity android:name=".DeleteAccountActivity" />
         <activity android:name=".ChangeUsernameActivity" />
         <activity
             android:name=".SearchActivity"
