--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.projekatproba">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,9 +11,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ProjekatProba">
-        <activity android:name=".ChangePasswordActivity"></activity><activity android:name=".ProfileActivity"></activity>
+        <activity android:name=".ReceptDetaljActivity"></activity>
+        <activity android:name=".PromenaRecepataActivity" />
+        <activity android:name=".DodavanjeRecepataActivity" />
+        <activity android:name=".ChangePasswordActivity" />
+        <activity android:name=".ProfileActivity" />
         <activity android:name=".ChangeProfileDataActivity" />
-        <activity android:name=".ChangePasswordActivity" />        <activity android:name=".DeleteAccountActivity" />
+        <activity android:name=".ChangePasswordActivity" />
+        <activity android:name=".DeleteAccountActivity" />
         <activity android:name=".ChangeUsernameActivity" />
         <activity
             android:name=".SearchActivity"
@@ -29,7 +36,5 @@
         </activity>
         <activity android:name=".LogInActivity" />
     </application>
-
-    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
